--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-09-10  Tod Romo  <tromo@gorgoneion>
+
+	* Fixed bug affecting calling Trajectory::rewind() on Tinker ARC files
+
 2010-07-27    <tromo@spade.biophysics.rochester.edu>
 
 	* Added a tool for perturbing structures randomly
