--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-29    <alan@membrane>
+	* Changes Tools/xy_rdf.  Now able to split by molecule, residue, or
+	  segment.  Also, merged the functionality of xy_rdf_timeseries into 
+	  xy_rdf.  xy_rdf_timeseries is now deprecated, and will be deleted
+	  before the next release.
 2010-12-17    <alan@membrane>
 	* Changed Tools/rdf to be able to split by molecule, residue, or segment. 
 	  Now uses boost program options, so the command line is not backward
